Modified home callout CSS

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     </div>
     <div class="collapse navbar-collapse" id="main-nav-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/about">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Pricing</a></li>
         <li><a href="#">Blog</a></li>
@@ -31,8 +31,8 @@
     </div><!-- /.navbar-collapse -->
   </div>
 </nav>
-    <div class="container">
-      <%= yield %>
-    </div>
+    
+    <%= yield %>
+    
   </body>
 </html>
