--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1>Hello c9 Cloud IDE</h1>
+<div class="home-callout text-center conatiner-fluid">
+    <h1>Welcome to DevMatch</h1>
+    <h3>A membership site where entrepreneurs can meet developers.</h3>
+</div>
