--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,18 +41,10 @@ h1, h2, h3{
     padding-bottom: 100px;
     color: white;
 }
-.navbar-default .navbar-brand{
+.navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a{
     color: white;
-}
-.navbar-default .navbar-nav > li > a{
-    color:white;
-}
-
-.navbar-default .navbar-brand:hover{
-    color:white;
-    opacity:.75;
-}
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus{
-    color: white;
-    opacity: .75;
+    &:hover{
+        color:white;
+        opacity:.75;
+    }
 }
