--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,9 @@
  */
  @import 'bootstrap-sprockets';
  @import 'bootstrap';
+ // Font-Awesome Import
+ @import "font-awesome-sprockets";
+ @import "font-awesome";
  
 h1, h2, h3{
     font-family: 'Open Sans', sans-serif;
