Created contacts Table

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -11,7 +11,7 @@
         <%= f.text_field :email, class:'form-control' %>
         
         <%= f.label :comments %>
-        <%= f.text_area :comments, class:'form-control' %>
+        <%= f.text_area :comments, rows: "7", class:'form-control' %>
         </br>
         <%= f.submit 'Submit', class:'btn btn-primary' %>
         <% end %>
