--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,9 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-md-offset-4">
+      <%= flash[:notice] %>
       <div class="well">
         <h3 class="text-center">Contact Form</h3>
-        <%= form_for "/contacts", :html => {:class => 'form-group'} do |f| %>
+        <%= form_for @contact, :html => {:class => 'form-group'} do |f| %>
         <%= f.label :name %>
         <%= f.text_field :name, class:'form-control' %>
         
