Added Mail triggerring Feature and made the changes in the controller file

--- a/app/views/contact_mailer/contact_email.html.erb
+++ b/app/views/contact_mailer/contact_email.html.erb
@@ -2,7 +2,7 @@
 <html>
     <body>
       <p>You have received an email from 
-      <%= "#{ :name }, #{ :email }."%>
+      <%= "#{ @name }, #{ @email }."%>
       </p>  </br>
       <p><%= @body %></p>
     </body>
