--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,13 @@
     </div>
     <div class="collapse navbar-collapse" id="main-nav-collapse">
       <ul class="nav navbar-nav navbar-right">
+        <% if !user_signed_in? %>
+          <li><%= link_to 'Login', user_session_url %></li>
+          <li><%= link_to 'Signup', new_user_registration_url %></li>
+        <% else -%>
+          <li><%= link_to 'My Account', edit_user_registration_url %></li>
+          <li><%= link_to 'Logout', destroy_user_session_url,method: :delete %></li>
+        <% end -%>
         <li><%= link_to 'Contact Us', new_contact_url %></li>
         <li><%= link_to 'About', aboutus_url %></li>
       </ul>
