Added association for plans and users

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -52,6 +52,9 @@ h1, h2, h3{
 .alert-notice{
     display :none;
 }
+.alert-alert{
+    display:none;
+}
 
 .home-callout{
     // Gradient is provided by @_ighosh from https://uigradients.com
