--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,19 @@
 <div class="container">
   <div class="col-md-4 col-md-offset-4">
     <div class="well">
-      <h2>Sign up</h2>
-      <%= form_for(resource, as: resource_name,html: {class: 'form-group'}, url: registration_path(resource_name)) do |f| %>
-        <%= devise_error_messages! %>
-      
-        <div class="field">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, class: 'form-control' %>
-        </div>
-      
-        <div class="field">
-          <%= f.label :password %>
-          <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
-        </div>
-      
-        <div class="field">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
-        </div>
-        </br>
-        <div class="actions">
-          <%= f.submit "Sign up", class: 'btn btn-success' %>
-        </div>
-      <% end %>
-      
-      <%= render "devise/shared/links", html: { class: 'btn btn-primary' } %>
+      <div class="text-center">
+        <% if params[:plan] == "pro" %>
+          <strong>Pro Sign-up</strong><p>Sign up for $10/month and get access to the community and contact information.</p>
+        <% else %>
+          <strong>Basic Sign-up</strong><p>Sign up for free and get basic access to the community.</p>
+        <% end %>
+      </div>  
+          <% if params[:plan] == "pro" %>
+            <%= render "pro_form" %>
+          <% else %>
+            <%= render "basic_form" %>
+          <% end %>
+        <%= render "devise/shared/links", html: { class: 'btn btn-primary' } %>
     </div>
   </div>
 </div>
