--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,22 @@
     <h1>Welcome to DevMatch</h1>
     <h3>A membership site where entrepreneurs can meet developers.</h3>
 </div>
+</br>
+<div class="container">
+    <div class="row">
+            <div class="col-md-6 text-center">
+                <div class="well">
+                    <h2>Basic Membership</h2>
+                    <h5>Sign up for free and get basic access to the community.</h5>
+                    <%= link_to  "Sign-up with Basic Membership Plan",new_user_registration_url(plan: @basic_plan.name), class:'btn btn-primary btn-lg' %>
+                </div>
+            </div>
+            <div class="col-md-6 text-center">
+                <div class="well">
+                    <h2>Pro Membership</h2>
+                    <h5>Sign up for $10/month and get access to the community and contact information.</h5>
+                    <%= link_to  "Sign-up with Pro Membership Plan", new_user_registration_url(plan: @pro_plan.name) , class:"btn btn-success btn-lg" %>
+                </div>
+            </div>
+    </div>
+</div>
