--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,14 +9,14 @@
                 <div class="well">
                     <h2>Basic Membership</h2>
                     <h5>Sign up for free and get basic access to the community.</h5>
-                    <%= link_to  "Sign-up with Basic Membership Plan",new_user_registration_url(plan: @basic_plan.name), class:'btn btn-primary btn-lg' %>
+                    <%= link_to  "Sign-up with Basic Membership Plan",new_user_registration_url(plan: @basic_plan.id), class:'btn btn-primary btn-lg' %>
                 </div>
             </div>
             <div class="col-md-6 text-center">
                 <div class="well">
                     <h2>Pro Membership</h2>
                     <h5>Sign up for $10/month and get access to the community and contact information.</h5>
-                    <%= link_to  "Sign-up with Pro Membership Plan", new_user_registration_url(plan: @pro_plan.name) , class:"btn btn-success btn-lg" %>
+                    <%= link_to  "Sign-up with Pro Membership Plan", new_user_registration_url(plan: @pro_plan.id) , class:"btn btn-success btn-lg" %>
                 </div>
             </div>
     </div>
