--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -1,4 +1,4 @@
- <%= form_for(resource, as: resource_name,html: {class: 'form-group'}, url: registration_path(resource_name)) do |f| %>
+ <%= form_for(resource, as: resource_name,html: {class: 'form-group', id:'pro_form'}, url: registration_path(resource_name)) do |f| %>
         <%= devise_error_messages! %>
         <%= hidden_field_tag 'plan', params[:plan] %>
         <div class="field">
@@ -32,6 +32,6 @@
             <%= select_year nil, {start_year: Date.today.year, end_year: Date.today.year+15}, {name: nil, id: "card_year" } %>
         </div>
         <div class="actions">
-          <%= f.submit "Sign up", class: 'btn btn-success' %>
+          <%= f.submit "Sign up", class: 'btn btn-success', id: 'form-submit-btn' %>
         </div>
 <% end %>
