--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -1,4 +1,4 @@
- <%= form_for(resource, as: resource_name,html: {class: 'form-group', id:'pro_form'}, url: registration_path(resource_name)) do |f| %>
+ <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-group', id:'pro_form'}) do |f| %>
         <%= devise_error_messages! %>
         <%= hidden_field_tag 'plan', params[:plan] %>
         <div class="field">
