--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,13 +2,13 @@
   <div class="col-md-6 col-md-offset-3">
     <div class="well">
       <div class="text-center">
-        <% if params[:plan]=="2" %>
+        <% if params[:plan]=='2' %>
           <strong>Pro Sign-up</strong><p>Sign up for $10/month and get access to the community and contact information.</p>
         <% else %>
           <strong>Basic Sign-up</strong><p>Sign up for free and get basic access to the community.</p>
         <% end %>
       </div>  
-          <% if params[:plan]=="2" %>
+          <% if params[:plan]=='2' %>
             <%= render "pro_form" %>
           <% else %>
             <%= render "basic_form" %>
