--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,4 +20,5 @@
                 </div>
             </div>
     </div>
+    <%= link_to 'Create Profile', new_user_profile_url(user_id: current_user) if user_signed_in? %>
 </div>
