--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -16,7 +16,7 @@
           <%= f.label :contact_email %>
           <%= f.text_field :contact_email, class:'form-control'%>
           <%= f.label :description %>
-          <%= f.text_field :description, class:'form-control'%>
+          <%= f.text_area :description, rows: "5", class:'form-control'%>
           </br>
           <%= f.submit 'Create Profile', class: 'btn btn-primary'%>
       <% end %>
