Added the profile edit section and changed the Home page of the DevMatch Community Web App

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -48,7 +48,12 @@ h1, h2, h3{
 .navbar{
     border: none;
 }
-
+.pro-box{
+    padding-top: 20px;
+}
+.well-modify{
+    background-color:#00c6ff ;
+}
 .flash-container {
   position: absolute;
   width: 100%;
