--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,7 @@
     <h3>A membership site where entrepreneurs can meet developers.</h3>
 </div>
 </br>
+<% if !user_signed_in? %>
 <div class="container">
     <div class="row">
             <div class="col-md-6 text-center">
@@ -22,3 +23,29 @@
     </div>
     <%= link_to 'Create Profile', new_user_profile_url(user_id: current_user) if user_signed_in? %>
 </div>
+<% else %>
+    <div class="container">
+    <div class="row">
+            <div class="col-md-6 text-center">
+                <div class="well">
+                    <h2>Your Profile</h2>
+                    <% if current_user.profile %>
+                    <p>Edit/View your profile available in DevMatch Community.</p>
+                    <%= link_to  "View Your Profile",user_url(id: current_user.id), class:'btn btn-default btn-lg btn-block' %>
+                    <%= link_to  "Edit Your Profile",edit_user_profile_url(:user_id => current_user.id), class:'btn btn-default btn-lg btn-block' %>
+                    <% else %>
+                    <p>Create your profile to make your visibility in DevMatch Community.</p>
+                    <%= link_to  "Create Your Profile",new_user_profile_url(user_id: current_user), class:'btn btn-default btn-lg btn-block' %>
+                    <% end %>
+                </div>
+            </div>
+            <div class="col-md-6 text-center">
+                <div class="well">
+                    <h2>DevMatch Community</h2>
+                    <p>Visit Developers, Entrepreneurs & Investors in DevMatch Community.</p>
+                    <%= link_to  "Visit the Community", users_url , class:"btn btn-success btn-lg btn-block" %>
+                </div>
+            </div>
+    </div>
+</div>
+<% end %>
