--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag "https://js.stripe.com/v2/", type: 'text/javascript' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
     <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
   </head>
 
@@ -29,7 +30,8 @@
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
           <li><%= link_to 'Logout', destroy_user_session_url, method: :delete %></li>
-        <li><%= link_to 'My Account', edit_user_registration_url %></li>
+          <li><%= link_to 'Community', users_url %></li>  
+          <li><%= link_to 'My Account', edit_user_registration_url %></li>
         <% else %>
           <li><%= link_to 'Login', user_session_url %></li>
         <% end %>
@@ -45,6 +47,5 @@
     <% end %>
     </div>
     <%= yield %>
-    
   </body>
 </html>
